[tool.poetry]
name = "ways_py"
version = "0.0.4"
description = "WAYS package for Python developed at University of Warwick and The Alan Turing Institute."
authors = ["Ed Chalstrey <echalstrey@turing.ac.uk>", "Roly Perera <rperera@turing.ac.uk>"]
homepage = "https://github.com/WarwickCIM/ways-py"
documentation = "https://warwickcim.github.io/ways-py/"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.2"
mypy = "^0.910"
importlib-metadata = "^4.8.1"
pytest = "^6.2.5"
altair = "^4.1.0"
altair-saver = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
