[tool]

[tool.poetry]
name = "ways_py"
version = "0.1.1"
description = "WAYS package for Python developed at University of Warwick and The Alan Turing Institute."
authors = ["Ed Chalstrey <echalstrey@turing.ac.uk>", "Roly Perera <rperera@turing.ac.uk>"]
homepage = "https://github.com/WarwickCIM/ways-py"
documentation = "https://warwickcim.github.io/ways-py/"
readme = "README.md"
license = "MIT"
classifiers=[
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.9',
]
include = [
    "LICENSE",
    "backfillz/py.typed"
]

[tool.poetry.dependencies]
python = "3.9.9"
importlib-metadata = "^4.8.1"

altair = "^4.1.0"
altair-saver = "^0.5.0"

pytest = "^6.2.5"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"
nbmake = "^0.8"
certifi = "^2021.10.8"
ipython = "^7.29.0"
ipywidgets = "^7.6.5"
Shapely = "^1.8.0"
vega-datasets = "^0.9.0"
jsonschema="3.2.0"  # pin to avoid https://github.com/altair-viz/altair/issues/2496
selenium = "^4.0.0"
pdocs = "^1.1.1"


[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-colors = "^0.1.9"
mypy = "^0.910"
pytest = "^6.2.5"
nbstripout = "^0.5.0"
geopandas = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
